Update to use the libyuarel and http-parser libraries as sub-components

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 idf_component_register(
 	SRCS "x_http_client.c" "x_http_common.c" "x_http_server.c"
+		"libyuarel/yuarel.c"
+		"http-parser/http_parser.c"
 	INCLUDE_DIRS "."
-	REQUIRES http-parser irmacos libyuarel
+		"libyuarel/."
+		"http-parser/."
+	REQUIRES irmacos
 	PRIV_REQUIRES commands printf rtos-support rules sitewhere stringsX systiming x_json
 )
