--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ set( srcs "x_http_client.c" "x_http_common.c" "x_http_server.c" "${PRepo}/libyua
 set( include_dirs "." "${PRepo}/libyuarel/." "${PRepo}/http-parser/." )
 set( priv_include_dirs )
 set( requires buffers common rtos-support socketsX stringsX ) 
-set( priv_requires hal_esp32 irmacos jsonX main printfx rules syslog systiming )
+set( priv_requires confidential hal_esp32 irmacos jsonX main printfx rules syslog systiming )
 
 idf_component_register(
 	SRCS ${srcs} 		
