--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,12 @@
 set( srcs "x_http_client.c" "x_http_common.c" "x_http_server.c" "${PRepo}/libyuarel/yuarel.c" "${PRepo}/http-parser/http_parser.c" )
 set( include_dirs "." "${PRepo}/libyuarel/." "${PRepo}/http-parser/." )
 set( priv_include_dirs )
-set( requires buffers common rtos-support socketsX stringsX ) 
-set( priv_requires confidential hal_esp32 irmacos jsonX main printfx rules syslog systiming )
+set( requires "buffers socketsX stringsX" )
+set( priv_requires "confidential irmacos jsonX rules printfx syslog systiming" )
 
 idf_component_register(
-	SRCS ${srcs} 		
-	INCLUDE_DIRS ${include_dirs} 
+	SRCS ${srcs}
+	INCLUDE_DIRS ${include_dirs}
 	PRIV_INCLUDE_DIRS ${priv_include_dirs}
 	REQUIRES ${requires}
 	PRIV_REQUIRES ${priv_requires}
